--- a/site/layouts/partials/hearts/main.html
+++ b/site/layouts/partials/hearts/main.html
@@ -1,8 +1,8 @@
-<div id="glitch">
-  <!-- Begin MailChimp Signup Form -->
+<div id="hearts">
+  <!-- Begin Mailchimp Signup Form -->
   <div id="mc_embed_signup">
     <form
-      action="https://raar.us16.list-manage.com/subscribe/post?u=60d07f6b6abd49dbba6c546d5&amp;id=50f18a52b4"
+      action="https://raar.us16.list-manage.com/subscribe/post?u=60d07f6b6abd49dbba6c546d5&amp;id=005caf5a92"
       method="post"
       id="mc-embedded-subscribe-form"
       name="mc-embedded-subscribe-form"
@@ -11,12 +11,9 @@
       novalidate
     >
       <div id="mc_embed_signup_scroll">
-        <h2 class="signup-title">get the goods</h2>
+        <h2 class="signup-title">download hearts</h2>
         <div class="mc-field-group">
-          <label for="mce-EMAIL"
-            >Email Address
-            <span class="asterisk">*</span>
-          </label>
+          <label for="mce-EMAIL">Email Address </label>
           <input
             type="email"
             value=""
@@ -41,7 +38,7 @@
         <div style="position: absolute; left: -5000px;" aria-hidden="true">
           <input
             type="text"
-            name="b_60d07f6b6abd49dbba6c546d5_50f18a52b4"
+            name="b_60d07f6b6abd49dbba6c546d5_005caf5a92"
             tabindex="-1"
             value=""
           />
@@ -51,7 +48,7 @@
             type="submit"
             value="Subscribe"
             name="subscribe"
-            id="mc-embedded-subscribe"
+            id="hearts-embedded-subscribe"
             class="button"
           />
         </div>
